<resources>
    <string name="app_name">Notes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="add">Add note</string>
    <string name="important">Important:</string>
    <string name="date">Date:</string>
    <string name="select_date">Select Date</string>
    <string name="agree">Agree</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="note_img_view_desc">Note actions</string>
    <string name="sure_exit">Are you sure to want exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="bye">Bye bye</string>
    <string name="warning">Warning</string>
    <string name="about">About</string>
    <string name="note_app">Note Application\nwith in memory storage</string>
    <string name="open_drawer">drawer_open</string>
    <string name="close_drawer">drawer_close</string>
    <string name="about_text">Note Application. Created in 2022</string>
</resources>