<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/note_item_card_elevation"
    app:cardCornerRadius="@dimen/note_item_card_corner_radius"
    android:layout_margin="@dimen/note_item_margin"
    android:clickable="true"
    android:focusable="true"
    android:background="?selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/note_item_margin">

        <TextView
            android:id="@+id/note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/title"
            android:textSize="@dimen/note_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/note_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/description"
            android:layout_marginTop="@dimen/description_margin"
            android:textSize="@dimen/note_description_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_title"/>

        <TextView
            android:id="@+id/note_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/note_item_margin"
            android:textSize="@dimen/note_item_label_text_size"
            tools:text="@string/important"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_description"/>

        <TextView
            android:id="@+id/note_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/note_item_margin"
            android:textSize="@dimen/note_item_label_text_size"
            app:layout_constraintTop_toBottomOf="@id/note_description"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>